2013-08-31  Darshit Shah  <darnir@gmail.com>

	* README: Explain that TEST_NAME needs to be unique
	* Test-auth-no-challenge.py: Edit non-unique TEST_NAME

2013-08-31  Darshit Shah  <darnir@gmail.com>

	* HTTPTest.py (ServerError): Define new Exception for handling
	internal control flow.
	(StoppableHTTPServer.SendHeader): Simply pass. Do nothing. Adding
	functionality here seems to crash for no apparent reason.
	(stoppableHTTPServer.send_cust_headers): Minor optimization. No need
	for extra variable.
	(__Handler.Response): Handle explicit Response Code Rules
	(__Handler.Authentication): Handle Authentication rules
	(__Handler.handle_auth): Actual worker method for authentication
	(__Handler.ExpectHeader): Ensure Expected Headers are received
	(__Handler.RejectHeader): Ensure Blacklisted Headers are NOT received
	(__Handler.send_HEAD): Dynamically call server rule functions based on
	the self.rules list. This feature will later be added to POST/PUT, etc

2013-08-31  Darshit Shah  <darnir@gmail.com>

	* WgetTest.py: Remove import module defaultdict.
	(CommonMethods.get_server_rules): server_rules should be a dict, not a
	defaultdict (list).
	* HTTPServer.py (WgetHTTPRequestHandler.get_rule_list): If rule does
	not exist, return None.	Not an emppty list.
	(WgetHTTPRequestHandler.test_cookies): Rule variable is not a list
	(__Handler.send_cust_headers): Same
	(__Handler.custom_response): Same
	(__Handler.is_authorized): Same
	(__Handler.expect_headers): Same
	(__Handler.reject_headers): Same

2013-08-31  Darshit Shah  <darnir@gmail.com>

	* README: (newfile) Simple help / instructions about using the Test
	Environment.
	* Makefile.am: (newfile) Makefile for the Test Environment. Uses the
	Automake Parallel Test Harness
	* WgetTest.py: (newfile) Base module that executes the Test.
	* HTTPServer.py: (newfile) Contains the custom HTTP Server for the
	Test Environment. Creates an instance of http.server in Python3.