@@ -36,7 +36,8 @@ TESTS = Test-auth-basic-fail.py			\
 	Test-auth-no-challenge-url.py		\
 	Test-auth-retcode.py			\
 	Test-Content-disposition-2.py		\
-	Test-Content-disposition.py
+	Test-Content-disposition.py 		\
+	Test-Head.py
 
 XFAIL_TESTS = Test-auth-both.py
 LOG_COMPILER = python3
